K8s/command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec: 
      containers:
        - name: commandservice
          image: hoanglethien/commandservice:latest
          imagePullPolicy: Always
    
---
apiVersion: v1
kind: Service
metadata:
  name: commandservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
