K8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: "acme.com"
      http:
        paths:
          - pathType: Prefix
            path: "/v1/api/platform"
            backend:
              service:
                name: platformservice-clusterip-srv
                port:
                  number: 80
          - pathType: Prefix
            path: "/v1/api/internal/platform"
            backend:
              service:
                name: commandservice-clusterip-srv
                port:
                  number: 80
